--- a/css/chat.css
+++ b/css/chat.css
@@ -71,12 +71,8 @@
 
 .message {
   display: flex;
-  align-items: center;
-  width: 50%;
-}
-
-.message .message__content {
-  width: 80%;
+  align-items: flex-start;
+  margin-bottom: 20px;
 }
 
 .incoming-message {
@@ -90,7 +86,7 @@
 .incoming-message img {
   width: 30px;
   border-radius: 15px;
-  margin-right: 20px;
+  margin-right: 15px;
 }
 
 .message .message__bubble {
@@ -98,5 +94,25 @@
   box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
     0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
   padding: 10px 20px;
+  display: block;
   border-radius: 20px;
+  color:white;
+  font-weight: 600;
+}
+
+.incoming-message .message__author {
+  margin-top: 10px;
+  display: block;
+  font-weight: 600;
+  font-size: 12px;
+}
+
+.incoming-message .message__bubble {
+  border-bottom-left-radius: 0px;
+  background-image: linear-gradient(to right, #7b4397, #dc2430);
+}
+
+.sent-message .message__bubble {
+  border-bottom-right-radius: 0px;
+  background-image: linear-gradient(to left, #00c6ff, #0072ff);
 }
