--- a/css/chat.css
+++ b/css/chat.css
@@ -1,5 +1,15 @@
+.header-wrapper {
+  background-color: white;
+  padding: 5px 0px;
+  position: fixed;
+  top:0px;
+  width: 100%;
+  box-shadow: 0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+}
+
 .chats-body {
   padding: 10px 0px;
+  padding-top:100px;
 }
 
 .chats-body .header,
@@ -7,7 +17,7 @@
   padding: 0px 20px;
 }
 
-.chat-screen {
+.chats-body {
   background-image: url("../images/chatBg.png");
   min-height: 100vh;
 }
@@ -96,7 +106,7 @@
   padding: 10px 20px;
   display: block;
   border-radius: 20px;
-  color:white;
+  color: white;
   font-weight: 600;
 }
 
