--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 @import "header.css";
 @import "nav-bar.css";
 @import "friend.css";
+@import "friends.css";
 @import "find.css";
 @import "more.css";
 @import "settings.css";
